--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -207,3 +207,28 @@ body{
 .func-btn:active{
 	background-color: #e6e6e6;
 }
+
+.byte {
+	border: none;
+	background: transparent;
+	width: 22px;
+	text-align: left;
+	padding: 0;
+}
+
+#id {
+	padding-left: 5px;
+	border: 1px silver solid;
+	width: 160px;
+	box-shadow: 0 0 10px silver;
+}
+
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+
+* {
+    outline: 0 !important;
+}
