--- a/application/css/style.css
+++ b/application/css/style.css
@@ -189,14 +189,10 @@ input::-webkit-inner-spin-button {
 
 .name-of{
 	margin-right: 10px!important;
-	padding: 6px 12px 6px 12px;
+	padding: 5px;
 	background-color: #0069d9;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #0069d9;
 	border-radius: 5px;
 	user-select: none;
-	font-size: 1rem;
 }
 
 .separator{
