--- a/Main/css/style.css
+++ b/Main/css/style.css
@@ -232,3 +232,18 @@ input::-webkit-inner-spin-button {
 * {
     outline: 0 !important;
 }
+
+.form-signin .form-control {
+    position: relative;
+    box-sizing: border-box;
+    height: auto;
+    padding: 10px;
+    font-size: 16px;
+}
+
+.form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: auto;
+}
