--- a/application/css/task.css
+++ b/application/css/task.css
@@ -18,3 +18,10 @@
     color: #fff;
     font-size: 18pt;
 }
+
+.answer-row{
+    width: 100%;
+    background-color: #c4d5e4;
+    display: block;
+    padding-top: 30px;
+}
