--- a/application/css/style.css
+++ b/application/css/style.css
@@ -38,14 +38,6 @@ body{
 	height: 50px;
 }
 
-.answer-row{
-	width: 100%;
-	height: 506px;
-	background-color: #c4d5e4;
-	display: block;
-	padding-top: 30px;
-}
-
 .both-row{
 	width: 100%;
 	background-color: #09458d;
@@ -189,10 +181,14 @@ input::-webkit-inner-spin-button {
 
 .name-of{
 	margin-right: 10px!important;
-	padding: 5px;
+	padding: 6px 12px 6px 12px;
 	background-color: #0069d9;
+	border-style: solid;
+	border-width: 1px;
+	border-color: #0069d9;
 	border-radius: 5px;
 	user-select: none;
+	font-size: 1rem;
 }
 
 .separator{
