--- a/application/css/style.css
+++ b/application/css/style.css
@@ -180,15 +180,22 @@ input::-webkit-inner-spin-button {
 }
 
 .name-of{
-	margin-right: 10px!important;
-	padding: 6px 12px 6px 12px;
-	background-color: #0069d9;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #0069d9;
-	border-radius: 5px;
-	user-select: none;
-	font-size: 1rem;
+    display: inline-block;
+    font-weight: 400;
+    text-align: center;
+    white-space: nowrap;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    border: 1px solid transparent;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: .25rem;
+    background: #007BFF;
+	border-color: #245580;
 }
 
 .separator{
